<resources>
    <string name="app_name">AcolherApp</string>
    <string name="txt_tit_nomevisitante">Nome do visitante</string>
    <string name="nome_visitante">informe o nome</string>
    <string name="opmasculino">Masculino</string>
    <string name="opfeminino">Feminino</string>

    <string name="checkbox1">Cônjuge</string>
    <string name="checkbox2">Pais</string>
    <string name="checkbox3">Filho(s)</string>
    <string name="checkbox4">Outros</string>

    <string name="txt_tit_tel">TELEFONE DE CONTATO</string>
    <string name="txt_tel">insira o telefone</string>
    <string name="txt_tit_nome">NOME DO CONTATO</string>
    <string name="txt_email">Email: </string>
    <string name="txt_end_email">informe o email</string>
    <string name="txt_button">CADASTRAR</string>
    <string name="txt_tit_familia">Companhia do visitante</string>
    <string name="txt_buttonlimpar">LIMPAR</string>
    <string name="receber_visita">Dia da visita: </string>
    <string name="no">NÃO</string>
    <string name="sim">SIM</string>
    <string name="act_delete">Excluir</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string-array name="spinner_ddd">
        <item>DDD</item>
        <item>24</item>
        <item>21</item>
        <item>22</item>
        <item>12</item>
        <item>11</item>

        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>

        <item>27</item>
        <item>28</item>

        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>37</item>
        <item>38</item>

        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>

        <item>51</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>

        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>

        <item>71</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>77</item>
        <item>79</item>

        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>

        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>

    </string-array>
</resources>
