<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cadastrar_activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_acolher_app"></ImageView>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:context=".CadastrarActivity">

        <!-- IDENTIFICACAO DO VISITANTE-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_tit_nomevisitante"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtext_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_visitante"
            android:inputType="textCapCharacters"
            android:maxLines="1" />

        <!-- SEXO DO VISITANTE -->
        <RadioGroup
            android:id="@+id/radioGroupGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClick"
                android:text="@string/opmasculino" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClick"
                android:text="@string/opfeminino" />
        </RadioGroup>

        <!-- COMPANHIA DO VISITANTE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_tit_familia"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/checkbox1" />


            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/checkbox2" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/checkbox3" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/checkbox4" />


        </LinearLayout>


        <!-- CONTATOS DO VISITANTE-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_tit_tel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <Spinner
                android:id="@+id/meuddd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:entries="@array/spinner_ddd"></Spinner>

            <EditText
                android:id="@+id/edtext_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:hint="@string/txt_tel"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/txt_email"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edtext_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:hint="@string/txt_end_email"
                android:inputType="textEmailAddress"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/swt_visita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="swtVisita"
                android:text="@string/receber_visita"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="40dp"
                android:text="Dia da visita"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:padding="5dp"
                android:background="@drawable/fundo_data"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_limpar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/botao_limpar"
                android:onClick="limparV"
                android:padding="15dp"
                android:text="@string/txt_buttonlimpar"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@drawable/botao_cadastrar"
                android:onClick="cadastrarV"
                android:padding="15dp"
                android:text="@string/txt_button"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


    <!--BARRA DE PROGRESSO DA PERSISTÊNCIA DOS DADOS-->
    <ProgressBar
        android:id="@+id/progress_cadastrar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    </ProgressBar>

</FrameLayout>